# vicare-sqlite

./: .gitignore  ANNOUNCE  Makefile.am  README  acinclude.m4  configure.ac  configure.sh  prepare.sh
doc/: Makefile.am  macros.texi  vicare-sqlite.texi
lib/: Makefile.am  compile-all.sps  dependencies.make  features.c  libraries.scm
lib/vicare/: sqlite.sls  sqlite3.sls
lib/vicare/databases/: sqlite3.sls  sqlite3.vicare.sls
lib/vicare/databases/sqlite3/: constants.sls.in  constants.vicare.sls.in  unsafe-capi.sls  unsafe-capi.vicare.sls
lib/vicare/sqlite/: constants.sls.in
lib/vicare/sqlite3/: constants.sls.in
meta/autoconf/: vicare.m4
meta/makefiles/: lib.am  tests.am
meta/slackware/: doinst.sh.in
scripts/: build-makefile-rules.sps  compile-all.sps
src/: Makefile.am  not-implemented.c  vicare-sqlite-backup.c  vicare-sqlite-blobs.c  vicare-sqlite-collation.c  vicare-sqlite-connect.c  vicare-sqlite-core.c  vicare-sqlite-exec.c  vicare-sqlite-extensions.c  vicare-sqlite-functions.c  vicare-sqlite-internals.h  vicare-sqlite-library.c  vicare-sqlite-misc.c  vicare-sqlite-statements.c  vicare-sqlite-version.c  vicare-sqlite-wal.c  vicare-sqlite.c  vicare-sqlite3.c
tests/: Makefile.am  demo-for-documentation.sps  demo-for-plain-documentation.sps  proof-basic.sps  proof-for-documentation.sps  test-vicare-sqlite.sps  test-vicare-sqlite3-plain-authorizer.sps  test-vicare-sqlite3-plain-backup.sps  test-vicare-sqlite3-plain-blobs.sps  test-vicare-sqlite3-plain-collation.sps  test-vicare-sqlite3-plain-connect.sps  test-vicare-sqlite3-plain-core.sps  test-vicare-sqlite3-plain-exec.sps  test-vicare-sqlite3-plain-functions.sps  test-vicare-sqlite3-plain-statements-2.sps  test-vicare-sqlite3-plain-statements.sps  test-vicare-sqlite3-plain-wal.sps  test-vicare-sqlite3-plain.sps  test-vicare-sqlite3.sps
